# raspicat_map2gazebo

./: CMakeLists.txt  README.md  package.xml  raspicat_map2gazebo.repos
config/: map2gazebo.yaml
config/map/: map_tsudanuma_2_19.yaml
config/models/map_satellite_36.0834057_140.0767_155_155/: model.config  model.sdf
config/models/map_satellite_36.0834057_140.0767_155_155/materials/scripts/: map_tiles.material
config/models/tsukuba2023/: model.config  model.sdf
config/world/: tsukuba2023.world
launch/: check_gazebo_world.launch.xml  map2gazebo.launch.xml  raspicat_tsukuba2023_world.launch
scripts/: create_launch_xml.sh  map2gazebo_docker.sh  output_check.sh
