<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspicat_map2gazebo</name>
  <version>0.0.0</version>
  <description>The raspicat_map2gazebo package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/config/models"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
